fix: 모달이 열리면 padding right 설정하여 layout shift 방지

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -19,6 +19,10 @@ body {
   margin: 0;
 }
 
+body:has(#modal_container) {
+  padding-right: var(--scrollbar-width);
+}
+
 h1,
 h2,
 h3,
